--- a/apps/projman/templates/category.html
+++ b/apps/projman/templates/category.html
@@ -19,4 +19,5 @@
 	<li><a href="{{ thread }}" class="{% active request thread %}">Messages</a></li>
 	<li><a href="{{ milestones }}" class="{% active request milestones %}">Milestones</a></li>
 </ul>
+<div style="clear: both"></div>
 {% endblock %}
