--- a/apps/projman/templates/overview.html
+++ b/apps/projman/templates/overview.html
@@ -7,6 +7,7 @@
 	.date {
 		margin-bottom: 25px;
 		border-top: 2px solid #eee;
+		clear: both;
 	}
 	
 	.date .dateInnerContainer {
@@ -22,6 +23,7 @@
 	
 	.item {
 		margin: 2px 0;
+		clear: both;
 	}
 	
 	.item .itemType {
@@ -46,6 +48,7 @@
 	.item .itemText {
 		float: left;
 		padding-top: 4px;
+		width: 600px;
 	}
 	
 	.item .itemProject {
