--- a/templates/content.html
+++ b/templates/content.html
@@ -10,7 +10,7 @@
 	<div id="headline">
 		{% block headline %}{% endblock %}
 	</div>
-	<div id="navMenu" class="floatContainer">
+	<div id="navMenu">
 		{% block navMenu %}{% endblock %}
 	</div>
 	<div id="content">
