--- a/apps/projman/templates/addmilestone.html
+++ b/apps/projman/templates/addmilestone.html
@@ -2,7 +2,7 @@
 	<input type="hidden" name="priority" value=""/>
 	<input type="hidden" name="category" value="{{ category.id }}"/>
 	<label for="name">Name:</label> <input type="text" name="{{ milestone_form.name.name }}" style="width: 221px;"/><br/>
-	<label for="description">Description:</label> <input type="text" name="{{ milestone_form.description.name }}" style="width: 140px;"/><br/>
+	<label for="description">Description:</label> <textarea name="{{ milestone_form.description.name }}" style="width: 196px; height: 150px;"></textarea><br/>
 	<label for="deadline">Deadline:</label> <input type="text" name="{{ milestone_form.deadline.name }}" style="width: 140px;"/>
 	<button type="button" class="button">Add</button>
 </form>
