--- a/apps/projman/templates/milestones.html
+++ b/apps/projman/templates/milestones.html
@@ -14,25 +14,31 @@
 		padding: 10px;
 	}
 	
+	.milestone .msMetaBanner {
+		margin-bottom: 5px;
+	}
 	.milestone .msPercCompleted {
 		text-align: center;
 		font-size: 18px;
 		font-weight: bold;
 		font-family: Georgia;
-		color: #080;
-	}
-	
-	.milestone .msName {
+		color: #fff;
+		padding: 6px;
+		background: #DE70AA;
 		float: left;
-		font-weight: bold;
-		font-size: 12px;
 	}
-	
 	.milestone .msDeadline {
 		float: right;
 		font-weight: bold;
 		font-size: 12px;
 		color: #666;
+	}
+	
+	.milestone .msName {
+		clear: both;
+		font-weight: bold;
+		font-size: 12px;
+		color: #C62D7D;
 	}
 	
 	.milestone .msDescription {
@@ -75,19 +81,20 @@
 			<div id="milestones">
 				{% for milestone in category.milestone_set.all %}
 					<div id="milestone{{ milestone.id }}" class="milestone" rel="{{ milestone.id }}">
-						<div class="msPercCompleted">{{ milestone.perc_completed|floatformat:3 }}%</div>
+						<div class="msMetaBanner floatContainer">
+							<div class="msPercCompleted">{{ milestone.perc_completed|floatformat:2 }}%</div>
+							<div class="msDeadline">{{ milestone.days_remaining.days }} day{% ifnotequal milestone.days_remaining.days 1 %}s{% endifnotequal %} remaining ({{ milestone.deadline|date:"Y-m-d" }})</div>
+						</div>
 						<div class="msName">{{ milestone.name }}</div>
-						<div class="msDeadline">{{ milestone.days_remaining.days }} day{% ifnotequal milestone.days_remaining.days 1 %}s{% endifnotequal %} remaining ({{ milestone.deadline|date:"Y-m-d" }})</div>
 						<div class="msDescription">{{ milestone.description }}</div>
 						<div class="msDependenciesHeader">Dependencies:</div>
 						<div class="msDependencies">
 							{% for project in milestone.project_set.all %}
-							<div class="msProject">
+							<div class="msProject floatContainer">
 								<div class="msProjectPercCompleted">{{ project.perc_completed|floatformat:3 }}%</div>
 								<div class="msProjectName">{{ project.name }}</div>
 							</div>
 							{% endfor %}
-							<div style="clear: both;"></div>
 						</div>
 						<select name="project_id">
 							{% for project in category.project_set.all %}
