--- a/apps/projman/templates/overview.html
+++ b/apps/projman/templates/overview.html
@@ -27,14 +27,30 @@
 	}
 	
 	.item .itemType {
-		background: #76c;
 		font-weight: bold;
 		color: #fff;
 		float: left;
 		margin-right: 5px;
 		padding: 5px;
-		width: 50px;
-		text-align: center;
+		width: 65px;
+		text-align: right;
+		font-variant: small-caps;
+	}
+	
+	.itemType.todo {
+		background: #76c;
+	}
+	
+	.itemType.message {
+		background: #FB5200;
+	}
+	
+	.itemType.milestone {
+		background: #C13992;
+	}
+	
+	.itemType.todo.completed {
+		background: #696;
 	}
 	
 	.item .itemStamp {
@@ -55,37 +71,89 @@
 		font-weight: bold;
 	}
 	
-	.itemType.completed {
-		background: #696;
-	}
-	
 	.itemText.completed {
 		text-decoration: line-through;
 	}
+	
+	#milestonesHeader, #chronologyHeader {
+		font-size: 14px;
+		font-weight: bold;
+		margin-bottom:1em;
+	}
+	
+	#milestones, #chronology {
+		margin: 0 35px 1em 35px;
+	}
+	
+	.milestone {
+		margin-bottom: 1em;
+	}
+	
+	.milestone .msPercCompleted {
+		text-align: center;
+		font-size: 18px;
+		font-weight: bold;
+		font-family: Georgia;
+		color: #fff;
+		padding: 6px;
+		background: #DE70AA;
+		float: left;
+		margin-right: 5px;
+	}
+	
+	.milestone .msDeadline {
+		float: right;
+		font-weight: bold;
+		font-size: 12px;
+		color: #666;
+		padding-top: 7px;
+	}
+	
+	.milestone .msName {
+		float: left;
+		font-weight: bold;
+		font-size: 12px;
+		color: #C62D7D;
+		padding-top: 7px;
+	}
 </style>
+<div id="milestonesHeader">Milestones:</div>
 <div id="milestones">
 	{% for milestone in category.milestone_set.all %}
-		<div id="milestone{{ milestone.id }}" class="milestone">
+		<div id="milestone{{ milestone.id }}" class="milestone floatContainer">
+			<div class="msPercCompleted">{{ milestone.perc_completed|floatformat:2 }}%</div>
 			<div class="msName">{{ milestone.name }}</div>
 			<div class="msDeadline">{{ milestone.days_remaining.days }} day{% ifnotequal milestone.days_remaining.days 1 %}s{% endifnotequal %} remaining ({{ milestone.deadline|date:"Y-m-d" }})</div>
-			<div class="msDescription">{{ milestone.description }}</div>
 		</div>
 	{% endfor %}
 </div>
-<div id="itemsByDate">
+<div id="chronologyHeader">Chronology:</div>
+<div id="chronology">
 	{% for datelist in items %}
 		<div class="date">
 			<div class="dateHeader">{{ datelist.0 }}</div>
 			<div class="dateInnerContainer">
 				{% for e in datelist.1 %}
-					{% ifequal e.1 'todo' %}
+					{% ifequal e.2 'todo' %}
 						<div class="item floatContainer">
-							<div class="itemType{% if e.2.completed %} completed{% endif %}">{{ e.1 }}</div>
-							<div class="itemStamp">{{ e.0 }}</div>
-							<div class="itemText{% if e.2.completed %} completed{% endif %}">{{ e.2.item }} (<span class="itemProject">{{ e.2.project.name }}</span>)</div>
+							<div class="itemType {{ e.2 }} {% if e.3.completed %} completed{% endif %}">{{ e.2 }}</div>
+							<div class="itemStamp">{{ e.1 }}</div>
+							<div class="itemText{% if e.3.completed %} completed{% endif %}">{{ e.3.item }} (<span class="itemProject">{{ e.3.project.name }}</span>)</div>
 						</div>
 					{% endifequal %}
-					{% ifequal e.1 'message' %}
+					{% ifequal e.2 'message' %}
+						<div class="item floatContainer">
+							<div class="itemType {{ e.2 }}">{{ e.2 }}</div>
+							<div class="itemStamp">{{ e.1 }}</div>
+							<div class="itemText"><strong>{{ e.3.creator.username }}</strong>: {{ e.3.text }}</div>
+						</div>
+					{% endifequal %}
+					{% ifequal e.2 'milestone' %}
+						<div class="item floatContainer">
+							<div class="itemType {{ e.2 }}">{{ e.2 }}</div>
+							<div class="itemStamp">{{ e.1 }}</div>
+							<div class="itemText"><strong>{{ e.3.name }}</strong>: {{ e.3.description }}</div>
+						</div>
 					{% endifequal %}
 				{% endfor %}
 			</div>
