changed todo to task
git-svn-id: https://svn.vrenesis.com/tasklance/trunk@3423 e4e18489-d04f-4dbd-bd3b-2e29156f5e3f

--- a/apps/projman/templates/milestones.html
+++ b/apps/projman/templates/milestones.html
@@ -101,7 +101,7 @@
 							<option value="{{ project.id }}">{{ project.name }}</option>
 							{% endfor %}
 						</select>
-						<a href="javascript:;" class="addProjectLink">Add Project To Milestone</a>
+						<a href="javascript:;" class="addProjectLink">Add Project As Dependency</a>
 					</div>
 				{% endfor %}
 			</div>
