--- a/apps/projman/templates/addtodo.html
+++ b/apps/projman/templates/addtodo.html
@@ -1,6 +1,6 @@
-<form autocomplete="off" onkeypress="return onKeyPress_addTodo(event, this);">
+<form autocomplete="off" onkeypress="return onKeyPress_addTask(event, this);">
 	<input type="hidden" name="project" value=""/>
 	<input type="hidden" name="priority" value=""/>
-	<input type="text" name="{{ todo_form.item.name }}" style="width: 572px;"/>
+	<input type="text" name="{{ task_form.item.name }}" style="width: 572px;"/>
 	<button type="button" class="button" style="width: 48px;">Add</button>
 </form>
