renamed more files
git-svn-id: https://svn.vrenesis.com/tasklance/trunk@3426 e4e18489-d04f-4dbd-bd3b-2e29156f5e3f

--- a/apps/projman/templates/tasks.html
+++ b/apps/projman/templates/tasks.html
@@ -56,6 +56,6 @@
 	</tr>
 </table>
 <div id="addTaskTemplateContainer" style="display: none;">
-	{% include "addTask.html" %}
+	{% include "addtask.html" %}
 </div>
 {% endblock %}
