--- a/apps/projman/templates/tasks.html
+++ b/apps/projman/templates/tasks.html
@@ -20,7 +20,7 @@
 									<ul class="tasks tasks_active">
 										{% show_tasks project %}
 									</ul>
-									<div class="addtaskContainer">
+									<div class="addTaskContainer">
 										<a href="javascript:;" class="showAddTaskLink">Add Task</a>
 									</div>
 									<ul class="tasks tasks_completed">
