fixed more css milestone issues
git-svn-id: https://svn.vrenesis.com/tasklance/trunk@3429 e4e18489-d04f-4dbd-bd3b-2e29156f5e3f

--- a/apps/projman/templates/milestones_css.html
+++ b/apps/projman/templates/milestones_css.html
@@ -9,11 +9,11 @@
 	margin: 0 35px 1em 35px;
 }
 	
-.milestone {
+.milestoneOverview {
 	margin-bottom: 1em;
 }
 
-.milestone .msPercCompleted {
+.milestoneOverview .msPercCompleted {
 	text-align: center;
 	font-size: 18px;
 	font-weight: bold;
@@ -25,22 +25,22 @@
 	margin-right: 5px;
 }
 
-.milestone .msMeta {
+.milestoneOverview .msMeta {
 	float: left;
 	font-size: 10px;
 }
 
-.milestone .msDeadline {
+.milestoneOverview .msDeadline {
 	color: #666;
 }
 
-.milestone .msName {
+.milestoneOverview .msName {
 	font-weight: bold;
 	font-size: 12px;
 	color: #C62D7D;
 }
 
-.milestone .msDescription {
+.milestoneOverview .msDescription {
 	font-weight: normal;
 	padding: 5px 0;
 	color: #666;
