--- a/apps/projman/templates/home.html
+++ b/apps/projman/templates/home.html
@@ -25,7 +25,7 @@
 						<div id="milestonesHeader">Milestones:</div>
 						<div id="milestones">
 							{% for milestone in category.milestone_set.all %}
-								<div id="milestone{{ milestone.id }}" class="milestone floatContainer">
+								<div id="milestone{{ milestone.id }}" class="milestoneOverview floatContainer">
 									<div class="msPercCompleted">{{ milestone.perc_completed|floatformat:2 }}%</div>
 									<div class="msMeta">
 										<div class="msName">{{ milestone.name }}</div>
