--- a/apps/projman/templates/overview.html
+++ b/apps/projman/templates/overview.html
@@ -88,10 +88,13 @@
 <div id="milestonesHeader">Milestones:</div>
 <div id="milestones">
 	{% for milestone in category.milestone_set.all %}
-		<div id="milestone{{ milestone.id }}" class="milestone floatContainer">
+		<div id="milestone{{ milestone.id }}" class="milestoneOverview floatContainer">
 			<div class="msPercCompleted">{{ milestone.perc_completed|floatformat:2 }}%</div>
-			<div class="msName">{{ milestone.name }}<div class="msDescription">{{ milestone.description }}</div></div>
-			<div class="msDeadline">started <strong>{{ milestone.created|date:"Y-m-d" }}</strong> - deadline <strong>{{ milestone.deadline|date:"Y-m-d" }}</strong><br/><strong>{{ milestone.days_remaining.days }}</strong> day{% ifnotequal milestone.days_remaining.days 1 %}s{% endifnotequal %} remaining</div>
+			<div class="msMeta">
+				<div class="msName">{{ milestone.name }}</div>
+				<div class="msDescription">{{ milestone.description }}</div>
+				<div class="msDeadline">started <strong>{{ milestone.created|date:"Y-m-d" }}</strong> - deadline <strong>{{ milestone.deadline|date:"Y-m-d" }}</strong> - <strong>{{ milestone.days_remaining.days }}</strong> day{% ifnotequal milestone.days_remaining.days 1 %}s{% endifnotequal %} remaining</div>
+			</div>
 		</div>
 	{% endfor %}
 </div>
