--- a/apps/projman/templates/milestones_css.html
+++ b/apps/projman/templates/milestones_css.html
@@ -14,14 +14,16 @@
 }
 
 .milestoneOverview .msPercCompleted {
+	border: 2px solid #B72B74;
 	text-align: center;
 	font-size: 18px;
 	font-weight: bold;
 	font-family: Georgia;
 	color: #fff;
-	padding: 6px;
+	padding: 8px;
 	background: #DE70AA;
 	float: left;
+	width: 75px;
 	margin-right: 5px;
 }
 
