--- a/apps/projman/templates/home.html
+++ b/apps/projman/templates/home.html
@@ -22,19 +22,21 @@
 					<div id="category{{ category.id }}" rel="{{ category.id }}" class="category">
 						<h1><a href="{% url pm_delcategory category.id %}"><img src="/site_media/images/report_delete.gif" alt="Delete Category"/></a> <a href="{% url pm_overview category.id %}"><span class="categoryName" rel="name">{{ category.name }}</span></a></h1>
 						<div class="categoryDescription" rel="description">{{ category.description }}</div>
-						<div id="milestonesHeader">Milestones:</div>
-						<div id="milestones">
-							{% for milestone in category.milestone_set.all %}
-								<div id="milestone{{ milestone.id }}" class="milestoneOverview floatContainer">
-									<div class="msPercCompleted">{{ milestone.perc_completed|floatformat:2 }}%</div>
-									<div class="msMeta">
-										<div class="msName">{{ milestone.name }}</div>
-										<div class="msDescription">{{ milestone.description }}</div>
-										<div class="msDeadline">started <strong>{{ milestone.created|date:"Y-m-d" }}</strong> - deadline <strong>{{ milestone.deadline|date:"Y-m-d" }}</strong> - <strong>{{ milestone.days_remaining.days }}</strong> day{% ifnotequal milestone.days_remaining.days 1 %}s{% endifnotequal %} remaining</div>
+						{% if category.milestone_set.all.count %}
+							<div id="milestonesHeader">Milestones:</div>
+							<div id="milestones">
+								{% for milestone in category.milestone_set.all %}
+									<div id="milestone{{ milestone.id }}" class="milestoneOverview floatContainer">
+										<div class="msPercCompleted" style="background: {% perc_colorizer milestone.perc_completed %}; border-color: {% perc_colorizer_dark milestone.perc_completed 50 %}">{{ milestone.perc_completed|floatformat:2 }}%</div>
+										<div class="msMeta">
+											<div class="msName">{{ milestone.name }}</div>
+											<div class="msDescription">{{ milestone.description }}</div>
+											<div class="msDeadline">started <strong>{{ milestone.created|date:"Y-m-d" }}</strong> - deadline <strong>{{ milestone.deadline|date:"Y-m-d" }}</strong> - <strong>{{ milestone.days_remaining.days }}</strong> day{% ifnotequal milestone.days_remaining.days 1 %}s{% endifnotequal %} remaining</div>
+										</div>
 									</div>
-								</div>
-							{% endfor %}
-						</div>
+								{% endfor %}
+							</div>
+						{% endif %}
 						{% show_history category %}
 					</div>
 					{% endfor %}
@@ -69,4 +71,34 @@
 		</td>
 	</tr>
 </table>
+<script type="text/javascript" language="javascript">
+$(document).ready(function() {
+		$('.addCategoryContainer :button').click(function() {
+				var f = $(this.form);
+				$(':input[name=priority]', f).val($('.category').length);
+				$.post('{% url pm_addcategory %}', f.serialize(), function(response) {
+						var headline = $('<h1>')
+											.append(
+												$('<a>')
+													.attr('href', '/pm/delcategory/'+response.id)
+													.append(
+														$('<img>')
+															.attr('src', '/site_media/images/report_delete.gif')))
+											.append(' ')
+											.append(
+												$('<a>')
+													.attr('href', '/pm/category/view/'+response.id).text(response.name));
+						var cat = $('<div>')
+							.addClass('category')
+							.attr('id', 'category'+response.id)
+							.attr('rel', response.id)
+							.append(headline)
+							.append($('<div>').addClass('categoryDescription').text(response.description))
+							.appendTo('#categories');
+						
+						f.get(0).reset();
+					}, 'json');
+			});
+	});
+</script>
 {% endblock %}
