--- a/apps/projman/templates/milestones_css.html
+++ b/apps/projman/templates/milestones_css.html
@@ -1,8 +1,8 @@
 <style type="text/css">
 #milestonesHeader {
-	font-size: 14px;
+	font-size: 13px;
 	font-weight: bold;
-	margin-bottom:1em;
+	margin-bottom: 1em;
 }
 
 #milestones {
@@ -14,14 +14,13 @@
 }
 
 .milestoneOverview .msPercCompleted {
-	border: 2px solid #B72B74;
+	border: 2px solid #000;
 	text-align: center;
 	font-size: 18px;
 	font-weight: bold;
 	font-family: Georgia;
 	color: #fff;
 	padding: 8px;
-	background: #DE70AA;
 	float: left;
 	width: 75px;
 	margin-right: 5px;
