--- a/apps/projman/templates/show_history.html
+++ b/apps/projman/templates/show_history.html
@@ -1,8 +1,10 @@
+{% load custom_tags %}
+
 {% if tasks.count %}
 	<div class="categoryHistoryHeader">Recently Completed Tasks:</div>
 	<table class="categoryHistory" cellspacing="0">
 	{% for task in tasks %}
-		<tr class="historyLine{% cycle 'Odd' 'Even' %}">
+		<tr class="" style="color: {% colorizer forloop.counter tasks.count %};">
 			<td class="historyLineDate">{{ task.completed|date:"M j" }}</td>
 			<td class="historyLineItem">{{ task.item }}</td>
 		</tr>
