focus username box
git-svn-id: https://svn.vrenesis.com/tasklance/trunk@3433 e4e18489-d04f-4dbd-bd3b-2e29156f5e3f

--- a/templates/login.html
+++ b/templates/login.html
@@ -2,4 +2,9 @@
 
 {% block content %}
 {% include "login_form.html" %}
+<script type="text/javascript" language="javascript">
+$(document).ready(function() {
+		$('#id_username').get(0).focus();
+	});
+</script>
 {% endblock %}
