--- a/site_media/css/default.css
+++ b/site_media/css/default.css
@@ -288,7 +288,7 @@ a:hover {
 	font-weight: normal;
 }
 
-.categoryHistoryHeader {
+.homeHeader {
 	font-size: 13px;
 	font-weight: bold;
 	margin: 1em 0;
