--- a/apps/projman/templates/home.html
+++ b/apps/projman/templates/home.html
@@ -6,11 +6,11 @@
 {% block content %}
 {% include "milestones_css.html" %}
 <style type="text/css">
-	#milestonesHeader {
+	.milestonesHeader {
 		margin-top: 10px;
 	}
 	.msMeta {
-		width: 475px;
+		width: 470px;
 	}
 </style>
 <table cellspacing="0" id="overviewContainer">
@@ -22,21 +22,7 @@
 					<div id="category{{ category.id }}" rel="{{ category.id }}" class="category">
 						<h1><a href="{% url pm_delcategory category.id %}"><img src="/site_media/images/report_delete.gif" alt="Delete Category"/></a> <a href="{% url pm_overview category.id %}"><span class="categoryName" rel="name">{{ category.name }}</span></a></h1>
 						<div class="categoryDescription" rel="description">{{ category.description }}</div>
-						{% if category.milestone_set.all.count %}
-							<div id="milestonesHeader">Milestones:</div>
-							<div id="milestones">
-								{% for milestone in category.milestone_set.all %}
-									<div id="milestone{{ milestone.id }}" class="milestoneOverview floatContainer">
-										<div class="msPercCompleted" style="background: {% perc_colorizer milestone.perc_completed %}; border-color: {% perc_colorizer_dark milestone.perc_completed 50 %}">{{ milestone.perc_completed|floatformat:2 }}%</div>
-										<div class="msMeta">
-											<div class="msName">{{ milestone.name }}</div>
-											<div class="msDescription">{{ milestone.description }}</div>
-											<div class="msDeadline">started <strong>{{ milestone.created|date:"Y-m-d" }}</strong> - deadline <strong>{{ milestone.deadline|date:"Y-m-d" }}</strong> - <strong>{{ milestone.days_remaining.days }}</strong> day{% ifnotequal milestone.days_remaining.days 1 %}s{% endifnotequal %} remaining</div>
-										</div>
-									</div>
-								{% endfor %}
-							</div>
-						{% endif %}
+						{% show_milestones category %}
 						{% show_history category %}
 					</div>
 					{% endfor %}
