--- a/apps/projman/templates/overview.html
+++ b/apps/projman/templates/overview.html
@@ -82,23 +82,11 @@
 	}
 	
 	#chronology {
-		margin: 0 35px 1em 35px;	
+		margin: 0 35px 1em 35px;
 	}
 </style>
 {% include "milestones_css.html" %}
-<div id="milestonesHeader">Milestones:</div>
-<div id="milestones">
-	{% for milestone in category.milestone_set.all %}
-		<div id="milestone{{ milestone.id }}" class="milestoneOverview floatContainer">
-			<div class="msPercCompleted" style="background: {% perc_colorizer milestone.perc_completed %}; border-color: {% perc_colorizer_dark milestone.perc_completed 50 %}">{{ milestone.perc_completed|floatformat:2 }}%</div>
-			<div class="msMeta">
-				<div class="msName">{{ milestone.name }}</div>
-				<div class="msDescription">{{ milestone.description }}</div>
-				<div class="msDeadline">started <strong>{{ milestone.created|date:"Y-m-d" }}</strong> - deadline <strong>{{ milestone.deadline|date:"Y-m-d" }}</strong> - <strong>{{ milestone.days_remaining.days }}</strong> day{% ifnotequal milestone.days_remaining.days 1 %}s{% endifnotequal %} remaining</div>
-			</div>
-		</div>
-	{% endfor %}
-</div>
+{% show_milestones category %}
 <div id="chronologyHeader">Chronology:</div>
 <div id="chronology">
 	{% for datelist in items %}
