--- a/apps/projman/templates/show_history.html
+++ b/apps/projman/templates/show_history.html
@@ -1,7 +1,7 @@
 {% load custom_tags %}
 
 {% if tasks.count %}
-	<div class="categoryHistoryHeader">Recently Completed Tasks:</div>
+	<div class="homeHeader">Recently Completed Tasks:</div>
 	<table class="categoryHistory" cellspacing="0">
 	{% for task in tasks %}
 		<tr class="" style="color: {% colorizer forloop.counter tasks.count %};">
